--- a/css/styles.css
+++ b/css/styles.css
@@ -16,11 +16,6 @@ body {
     margin: 0 auto;
 }
 
-.flex-container {
-    display: flex;
-    gap: 2%;
-}
-
 header,
 footer {
     background-color: #115194;
@@ -46,9 +41,20 @@ nav {
     background-color: #b0d892;
     padding: 8rem 1rem;
     margin-bottom: 1.5rem;
-    width: calc(96%/3);
 }
 
 footer {
     padding: 3rem;
+}
+
+@media screen and (min-width: 815px) {
+    .flex-container {
+        display: flex;
+        gap: 2%;
+    }
+
+    .promo {
+        width: calc(96%/3);
+    }
+    /* .promo에 있던 width를 잘라와서 붙여준다. flex실행 될 때 width가 full 이었다가 작아지게 한다 */
 }
